jss-compiler/tests/semantic_errors/type_mismatch.jss
function void main() {
    let int x = 10;
    x = "texto";
}
